Modified as per pmd
git-svn-id: https://ncisvn.nci.nih.gov/svn/wustl_common_package/CommonPackage/branches/COMMON_PKG_REFACTOR_17_SEP08@1316 38c78225-d16a-144f-a689-2cd41fac0795